# tagent

./: .env.example  .gitignore  CLAUDE.md  CLI_GUIDE.md  COMPLETION_REPORT.md  FIX_NOTES.md  INTENT_SYSTEM_INSTALL.md  INTENT_SYSTEM_README.md  INTENT_SYSTEM_SUMMARY.md  OVERVIEW.md  PROJECT_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  SDLC_WORKFLOW_SUMMARY.md  YAGENT_CONFIG_SUMMARY.md  YAGENT_FIX_SUMMARY.md  YAGENT_RENAME_COMPLETE.md  YAGENT_RENAMING.md  advanced_examples.py  cli_demo.py  dynamic_agent_framework.py  intent_system_integration.py  pyproject.toml  quickstart.py  requirements.txt  test_agent.py  test_sdlc_intents.py  test_streaming.py  test_unified_agent.py  test_yagent_rename.py  test_yagent_with_config.py  tools_config.json  tree.txt  visualize_graph.py
.claude/: settings.local.json
examples/: custom_intent.py  external_project_usage.py  intent_basic_usage.py  sdlc_workflow_y_agent.py  test_sdlc_with_config.py  unified_agent_demo.py  workflow_example.py  workflow_intent_engine.py  workflow_intents.json  workflow_system_example.py  workflow_with_agent.py
intent_system/: __init__.py
intent_system/agent/: __init__.py  agent.py  graph.py  nodes.py  state.py
intent_system/builtin_intents/: __init__.py  data_intents.py
intent_system/core/: __init__.py  intent_definition.py  intent_parser.py  intent_registry.py  state.py
intent_system/data_flow/: __init__.py  data_flow_engine.py
intent_system/execution/: __init__.py  execution_tracker.py  intent_executor.py
intent_system/orchestration/: __init__.py  orchestrator.py
intent_system/workflow/: __init__.py  json_loader.py  workflow_intent.py  workflow_manager.py
scripts/: test_install.py
(+5 files in other folders)
